fix z-index

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -175,7 +175,7 @@ $xy-border: (
 
 $z-index: (
     modal: 1000,
-    header: 99,
+    header: 999,
     dropdown: 9
 ) !default;
 
